@@ -1,3 +1,10 @@
+Mon Oct  08 02:58:33 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
+	* I've fixed known bugs in the cursor behaviour in Ewl_Entry.
+	* Re-worked the whole selection algorithm in Ewl_Entry. At the
+	  moment it only displays the selection when you select text, it
+	  doesn't copy anything to the clip board. I need to think about
+	  what more features would be nice to have before i go any further.
+
 Thu Oct  04 06:22:44 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
 	* Fixed nasty bug in Ewl_Entry, when you do mouse_down after the
 	  text, it would set the cursor pos to be to high, this
